--- a/letusc/justfile
+++ b/letusc/justfile
@@ -5,20 +5,20 @@ lint:
 
 # build and test the project
 test:
-    echo "Running tests..."
+    @echo "Running tests..."
 
 # build the project with all dependencies compiled
 build:
-    echo "Building the project..."
+    @echo "Building the project..."
 
 # install dependencies and prepare the environment
 install:
-    echo "Installing dependencies..."
+    @echo "Installing dependencies..."
 
 # deploy the project to a server or cloud service
 deploy:
-    echo "Deploying the project..."
+    @echo "Deploying the project..."
 
 # clean up build artifacts and temporary files
 clean:
-    echo "Cleaning up build artifacts..."
+    @echo "Cleaning up build artifacts..."
